kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-srv
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - nodePort: 30800
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
